fix: overflow

--- a/dapps/shuttle-flow/src/index.css
+++ b/dapps/shuttle-flow/src/index.css
@@ -58,6 +58,7 @@ strong {
 body,
 html {
   height: 100%;
+  overflow: hidden;
 }
 
 
